Add favicon and title

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <title>❤️</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
 </head>
 <style>
