--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
 </head>
 <style>
+    body {
+        background-image: url('./pics/love_mobile.png');
+        background-repeat: no-repeat;
+        background-size: 1130px 2436px;
+    }
+
     #middle {
         width: 100%;
         text-align: center;
         font-size: -webkit-xxx-large;
         margin-top: 20%;
+        color: white;
     }
 </style>
 
